# Hector_3

./: .gitignore  readme.md
src/pai_12_control/: CMakeLists.txt  package.xml  调试记录.txt
src/pai_12_control/ConvexMPC/: Constraints.cpp  Constraints.h  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  GaitGenerator.cpp  GaitGenerator.h  RobotState.cpp  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp
src/pai_12_control/include/common/: Biped.h  LegController.h  StateEstimatorContainer.h
src/pai_12_control/include/interface/: CheatIO.h
src/pai_12_control/include/jocobia/: F_M_calculate.h  calculate_jocobia.h
src/pai_12_control/launch/: bringup.launch
src/pai_12_control/scripts/: callback_print.py  set_param.py  test_pino.py
src/pai_12_control/src/: main.cpp
src/pai_12_control/src/common/: LegController.cpp
src/pai_12_control/src/interface/: CheatIO.cpp
src/pai_12_control/src/jocobia/: calculate_jocobia.cpp
src/pai_12_control/test/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp
src/pai_12dof_v2_0312/: CMakeLists.txt  package.xml
src/pai_12dof_v2_0312/config/: 11.rviz  joint_names_pai_12dof_v2_0312.yaml  robot_control.yaml
src/pai_12dof_v2_0312/launch/: display.launch  gazebo.launch
src/pai_12dof_v2_0312/urdf/: pai_12dof_v2_0312.urdf  pai_sit.urdf
src/unitree_ros/unitree_gazebo/launch/: biped.launch  pi_12_dof.launch
